<resources>
    <string name="app_name">FindMe</string>
    <string name="findYourNewCarOnLime">Find your new  \n car Onlime</string>
    <string name="findYourNewAndUsedCars">Find your new and used cars. \n  Find models that match your needs.</string>
    <string name="sellYourVehicleOnFindMe">Sell your vehicle on FindMe.Onlime.com  \n It\'s easy and free.</string>
    <string name="sellYourVehicle">SELL YOUR VEHICLE</string>
    <string name="detailedSearch">DETAILED SEARCH*</string>
    <string name="searchVehicles">SEARCH VEHICLES</string>
    <string name="newString">NEW</string>
    <string name="used">USED</string>
    <string name="refineSearch">Refine Search</string>
    <string name="makeAModel">MAKE A MODEL</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="findCar">Find Car</string>
    <string name="_21Results">21 Results</string>
    <string name="dash">-</string>
    <string name="steps13">Steps 1/3</string>
    <string name="logIn">log in</string>
    <string name="signUpForFree">Sign up for FREE</string>
    <string name="sellYourVehicleSmall">Sell your Vehicle</string>
    <string name="step16">Step 1/6</string>
    <string name="Results">Results</string>
    <string name="free_advertising">Free advertising to thousands of potential buyers \n  Save your searches to come back to at later date.</string>
    <string name="create_account">Create Account</string>
    <string name="create_a_findmeonlime_acount">Create a FindMeOnLime Acount</string>
    <string name="sign_in_to_findmeonlime">Sign in to FindMeOnLime</string>
    <string name="step6">Step 6/6</string>
    <string name="you_can_tranfer">You can transfer up to 15 pictures (JPEG, max. 8MB per picture). You can set the photo order yourself. Simply hold down the the mouse button and drag the photo to where you would like it to appear.</string>
    <string name="uploadPhotos">Upload Photos</string>
    <string name="please_note">Please note: The pictures used must not be misleading or subject to the rights of a third party. Any breached of these regulations lead to the deletion of your ad according to our Terms and Conditions.</string>
    <string name="preview_ad">Preview Ad</string>
    <string name="make_model"><![CDATA[MAKE & MODEL]]></string>
    <string name="key_facts">KEY FACTS</string>
    <string name="step26">Step 2/6</string>
    <string name="step36">Step 3/6</string>
    <string name="features">FEATURES</string>
    <string name="steps46">Steps 4/6</string>
    <string name="additional_features">ADDITIONAL FEATURES</string>
    <string name="description">DESCRIPTION</string>
    <string name="please_describe">Please describe your vehicle - the more detailed, the better \n - Condition (looks, dents, etc) \n - Number of previous owners \n - Is it a non smoker vehicle? \n - Previous accidents \n - Are there outstanding repairs? \n - Not permitted: Telephone numbers, email addresses,
URL’s, HTML formatting \n You have 2000 characters at your disposal.  </string>
    <string name="technical_data">TECHNICAL DATA</string>
    <string name="vehicle_description">VEHICLE DESCRIPTION</string>
    <string name="finalStr">Final</string>
    <string name="submit">SUBMIT</string>
    <string name="modify">MODIFY</string>
    <string name="email">Email</string>
    <string name="change_password">Change password</string>
    <string name="profile_data">PROFILE DATA</string>
    <string name="password">Password</string>
    <string name="cc">CC</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="zip">ZIP</string>
    <string name="social_id">Social ID</string>
    <string name="phone">Phone</string>
    <string name="update">update</string>
    <string name="profile_picture">PROFILE PICTURE</string>
    <string name="profile_pic_description">Photo is an important way to identify yourself.\nPlease upload a photo that clearly shows your face.</string>
    <string name="by_uploading">By uploading your photo, you clarify you have the right to distribute this image.</string>
    <string name="step13">Step 1/3</string>
    <string name="stars"> *********</string>
    <string name="email_hint"> ella.johnson@yahoo.uk</string>
    <string name="step23">Step 2/3</string>
    <string name="step33">Step 3/3</string>
</resources>
