<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.korisnik.findme.EmailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="14">

            <include layout="@layout/header" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:weightSum="10">

                <TextView
                    android:id="@+id/tw_Results"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="4.5"
                    android:text="@string/email"
                    android:textAlignment="viewEnd"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/dash"
                    android:textColor="@color/green"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tw_Steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="4.5"
                    android:text="@string/step13"
                    android:textAlignment="viewStart"
                    android:textColor="@color/green"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/borders"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/email" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borders"
                        android:padding="2dp"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/password" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/stars"
                        android:background="@drawable/borders"
                        android:inputType="textPassword" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_marginTop="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/change_password" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <Button
                        android:id="@+id/backBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_weight="4"
                        android:background="@color/gray"
                        android:text="@string/back"
                        android:textColor="@color/white"
                        android:textSize="12dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2">

                    </LinearLayout>

                    <Button
                        android:id="@+id/nextBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_weight="4"
                        android:background="@color/green"
                        android:text="@string/next"
                        android:textColor="@color/white"
                        android:textSize="12dp" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>
