<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.korisnik.findme.Email3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="14">

            <include layout="@layout/header" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:weightSum="10">

                <TextView
                    android:id="@+id/tw_Results"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="4.5"
                    android:text="@string/email"
                    android:textAlignment="viewEnd"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/dash"
                    android:textColor="@color/green"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tw_Steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="4.5"
                    android:text="@string/step33"
                    android:textAlignment="viewStart"
                    android:textColor="@color/green"
                    android:textSize="20sp" />


            </LinearLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/borders"
                    android:orientation="vertical"
                    android:padding="16dp">





                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingBottom="4dp"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/profile_picture"
                            android:paddingBottom="2dp"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingBottom="2dp"
                            android:text="@string/profile_pic_description" />


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                        <Button
                            android:id="@+id/uploadBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:backgroundTint="@color/green"
                            android:text="@string/update"
                            android:textColor="@color/gray"
                            android:textSize="12dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/by_uploading" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:layout_marginTop="40dp"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <Button
                            android:id="@+id/backBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:layout_weight="4"
                            android:background="@color/gray"
                            android:text="@string/back"
                            android:textColor="@color/white"
                            android:textSize="12dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="2">

                        </LinearLayout>

                        <Button
                            android:id="@+id/nextBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:layout_weight="4"
                            android:background="@color/green"
                            android:text="@string/next"
                            android:textColor="@color/white"
                            android:textSize="12dp" />
                    </LinearLayout>


                </LinearLayout>

            </ScrollView>




        </LinearLayout>


    </LinearLayout>


</LinearLayout>
