<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.korisnik.findme.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_header"
        android:layout_weight="14">
        <include layout="@layout/header" />

    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/refineSearchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refineSearch" />

            <Button
                android:id="@+id/findCarBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/findCar" />

            <Button
                android:id="@+id/sellYourVehicleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sellYourVehicle" />

            <Button
                android:id="@+id/sellYourVehicle6Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sell your vehicle 6" />

            <Button
                android:id="@+id/resultsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Results" />

            <Button
                android:id="@+id/signInBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign In" />

            <Button
                android:id="@+id/profileBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile" />

            <Button
                android:id="@+id/emailBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email" />

        </LinearLayout>



    </LinearLayout>


</LinearLayout>