<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.korisnik.findme.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ll_header"
            android:layout_weight="14">
            <include layout="@layout/header" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:weightSum="16"
            android:padding="8dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/sign_in_to_findmeonlime"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:gravity="center"/>

            <WebView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borders"
                android:layout_weight="13">

            </WebView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_a_findmeonlime_acount"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/free_advertising"
                android:textColor="@color/gray" />


            <Button
                android:id="@+id/createAccountBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/green"
                android:text="@string/create_account"
                android:textColor="@color/gray"
                android:textSize="12dp" />

        </LinearLayout>



    </LinearLayout>


</LinearLayout>