<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_refine_search_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="14">

        <include layout="@layout/header" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gl_refine_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:weightSum="10">

            <TextView
                android:id="@+id/tw_Results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="4.5"
                android:text="@string/sellYourVehicleSmall"
                android:textAlignment="viewEnd"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/dash"
                android:textColor="@color/green"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tw_Steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="4.5"
                android:text="@string/steps46"
                android:textAlignment="viewStart"
                android:textColor="@color/green"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/borders"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/additional_features"
                android:textSize="16sp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ABS"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:text="ABS"/>

            </GridLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:weightSum="10">

                <Button
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_weight="4"
                    android:background="@color/gray"
                    android:text="@string/back"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                </LinearLayout>

                <Button
                    android:id="@+id/nextBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_weight="4"
                    android:background="@color/green"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
